--- a/src/app/pages/film/film.page.html
+++ b/src/app/pages/film/film.page.html
@@ -11,14 +11,15 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-item-divider>
+    <ion-label>Completed Anime</ion-label>
+  </ion-item-divider>
+
   <ion-grid>
-    <ion-row>
-      <ion-item-divider>
-        <ion-label>Completed Anime</ion-label>
-      </ion-item-divider>
-      <ion-col size="6" size-md="4" *ngFor="let item of filmList">
-        <ion-card class="custom-card" button routerLink="{{trimEndpoint(item.endpoint)}}">
-          <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/card-media.png" />
+    <ion-row class="card-container">
+      <ion-col class="card-grid" *ngFor="let item of filmList">
+        <ion-card class="custom-card" button routerLink="/film/{{trimEndpoint(item.endpoint)}}">
+          <img alt="Gambar Anime" src="{{item.thumb || 'assets/img/card-media.png'}}" />
           <ion-card-header>
             <ion-card-title>{{trimTitle(item.title, 12)}}</ion-card-title>
           </ion-card-header>
