--- a/src/app/pages/film/film.page.html
+++ b/src/app/pages/film/film.page.html
@@ -15,17 +15,25 @@
     <ion-label>Completed Anime</ion-label>
   </ion-item-divider>
 
-  <ion-grid>
-    <ion-row class="card-container">
-      <ion-col class="card-grid" *ngFor="let item of filmList">
-        <ion-card class="custom-card" button routerLink="/film/{{trimEndpoint(item.endpoint)}}">
-          <img alt="Gambar Anime" src="{{item.thumb || 'assets/img/card-media.png'}}" />
-          <ion-card-header>
-            <ion-card-title>{{trimTitle(item.title, 12)}}</ion-card-title>
-          </ion-card-header>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+  <div class="card-container">
+    <ion-card class="custom-card" button *ngFor="let item of filmList" routerLink="/film/{{trimEndpoint(item.endpoint)}}">
+      <img alt="Gambar Anime" src="{{item.thumb || 'assets/img/card-media.png'}}" />
+      <ion-card-header>
+        <ion-card-title>{{trimTitle(item.title, 12)}}</ion-card-title>
+      </ion-card-header>
+    </ion-card>
+    <ion-card class="custom-card">
+    </ion-card>
+    <ion-card class="custom-card">
+    </ion-card>
+    <ion-card class="custom-card">
+    </ion-card>
+    <ion-card class="custom-card">
+    </ion-card>
+    <ion-card class="custom-card">
+    </ion-card>
+    <ion-card class="custom-card">
+    </ion-card>
+  </div>
 
 </ion-content>
