--- a/src/app/pages/film/film.page.scss
+++ b/src/app/pages/film/film.page.scss
@@ -1,7 +1,9 @@
-/*.custom-card {
-  width: 10.5em;
-  height: 13em;
-}*/
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 
 .custom-card {
   width: 145px;
