--- a/src/app/pages/film/film.page.html
+++ b/src/app/pages/film/film.page.html
@@ -17,22 +17,14 @@
 
   <div class="card-container">
     <ion-card class="custom-card" button *ngFor="let item of filmList" routerLink="/film/{{trimEndpoint(item.endpoint)}}">
-      <img alt="Gambar Anime" src="{{item.thumb || 'assets/img/card-media.png'}}" />
+      <div class="image">
+        <img alt="Gambar Anime" src="{{item.thumb || 'assets/img/card-media.png'}}" />
+      </div>
       <ion-card-header>
         <ion-card-title>{{trimTitle(item.title, 12)}}</ion-card-title>
       </ion-card-header>
     </ion-card>
-    <ion-card class="custom-card">
-    </ion-card>
-    <ion-card class="custom-card">
-    </ion-card>
-    <ion-card class="custom-card">
-    </ion-card>
-    <ion-card class="custom-card">
-    </ion-card>
-    <ion-card class="custom-card">
-    </ion-card>
-    <ion-card class="custom-card">
+    <ion-card class="custom-card" *ngFor="let ii of [].constructor(10)">
     </ion-card>
   </div>
 
