--- a/src/app/pages/film/film.page.scss
+++ b/src/app/pages/film/film.page.scss
@@ -6,7 +6,22 @@
 }
 
 .custom-card {
-  width: 145px;
+  width: 165px;
+}
+
+@media screen and (max-width: 380px) {
+  .custom-card {
+    width: 100%;
+    height: 300px;
+  }
+
+  .custom-card .image img {
+    height: 265px;
+  }
+
+  .custom-card ion-card-header {
+    height: 20px;
+  }
 }
 
 .custom-card img {
