--- a/src/app/pages/film/film.page.scss
+++ b/src/app/pages/film/film.page.scss
@@ -1,17 +1,16 @@
 .card-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 180px);
   justify-content: center;
-}
-
-.custom-card {
-  width: 165px;
+  align-items: center;
 }
 
 @media screen and (max-width: 380px) {
+  .card-container {
+    grid-template-columns: repeat(auto-fill, 100%);
+  }
+
   .custom-card {
-    width: 100%;
     height: 300px;
   }
 
