--- a/src/app/pages/film/film.page.scss
+++ b/src/app/pages/film/film.page.scss
@@ -1,11 +1,11 @@
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 180px);
+  grid-template-columns: repeat(auto-fill, minmax(145px, 1fr));
   justify-content: center;
   align-items: center;
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 310px) {
   .card-container {
     grid-template-columns: repeat(auto-fill, 100%);
   }
